@@ -8,20 +8,28 @@
 
     <properties>
         <!-- PROJECT-->
-        <junit.version>4.11</junit.version>
+        <junit.version>4.12</junit.version>
+        <log4j.version>2.9.1</log4j.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <skipTests>true</skipTests>
 
         <!-- REST AND DROPWIZARD-->
-        <dropwizard.version>1.0.5</dropwizard.version>
-        <dropwizard.swagger.version>1.0.6-1</dropwizard.swagger.version>
-        <com.wordnik.version>1.5.3-M1</com.wordnik.version>
-        <zipkin.dropwizard.version>1.0.6-1</zipkin.dropwizard.version>
+        <dropwizard.version>1.1.0</dropwizard.version>
+        <dropwizard.swagger.version>1.1.0-1</dropwizard.swagger.version>
+        <zipkin.dropwizard.version>1.1.0-2</zipkin.dropwizard.version>
         <org.hamcrest.version>1.3</org.hamcrest.version>
-        <io.rest-assured.version>3.0.2</io.rest-assured.version>
+        <io.rest-assured.version>3.0.5</io.rest-assured.version>
 
         <!-- ELASTICSEARCH-->
-        <elastic.version>5.1.2</elastic.version>
+        <elastic.version>5.6.3</elastic.version>
+
+        <!-- GEO-->
+        <geotools.version>18.0</geotools.version>
+        <protobuf.version>3.4.0</protobuf.version>
+        <geoapi.version>3.0.1</geoapi.version>
+        <geojson.jackson.version>1.8</geojson.jackson.version>
+        <vivid.version>1.13</vivid.version>
+        <spatial4j.version>0.6</spatial4j.version>
 
         <!-- DOCUMENTATION GENERATION-->
         <swagger2markup.version>1.2.0</swagger2markup.version>
@@ -46,6 +54,7 @@
             <artifactId>dropwizard-core</artifactId>
             <version>${dropwizard.version}</version>
         </dependency>
+
         <!-- ____________________________________________________ -->
         <!-- MONITORING -->
         <!-- ____________________________________________________ -->
@@ -54,6 +63,7 @@
             <artifactId>zipkin-core</artifactId>
             <version>${zipkin.dropwizard.version}</version>
         </dependency>
+
         <!-- ____________________________________________________ -->
         <!-- SWAGGER -->
         <!-- ____________________________________________________ -->
@@ -62,11 +72,6 @@
             <artifactId>dropwizard-swagger</artifactId>
             <version>${dropwizard.swagger.version}</version>
             <exclusions><exclusion><groupId>org.glassfish.jersey.containers</groupId><artifactId>jersey-container-servlet-core</artifactId></exclusion></exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.wordnik</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>${com.wordnik.version}</version>
         </dependency>
 
         <!-- ____________________________________________________ -->
@@ -84,36 +89,36 @@
          <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-main</artifactId>
-            <version>17.2</version>
+            <version>${geotools.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>2.6.1</version>
+            <version>${protobuf.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.opengis</groupId>
             <artifactId>geoapi</artifactId>
-            <version>3.0.1</version>
+            <version>${geoapi.version}</version>
         </dependency>
 
         <dependency>
             <groupId>de.grundid.opendatalab</groupId>
             <artifactId>geojson-jackson</artifactId>
-            <version>1.8</version>
+            <version>${geojson.jackson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.vividsolutions</groupId>
             <artifactId>jts</artifactId>
-            <version>1.13</version>
+            <version>${vivid.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.locationtech.spatial4j</groupId>
             <artifactId>spatial4j</artifactId>
-            <version>0.6</version>
+            <version>${spatial4j.version}</version>
         </dependency>
 
 
@@ -138,6 +143,7 @@
             <version>${org.hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
+
         <!-- ____________________________________________________ -->
         <!-- LOGS -->
         <!-- ____________________________________________________ -->
@@ -145,7 +151,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.7</version>
+            <version>${log4j.version}</version>
         </dependency>
     </dependencies>
 
@@ -154,7 +160,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.7.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -163,8 +169,9 @@
             <plugin>
         		<groupId>org.apache.maven.plugins</groupId>
         		<artifactId>maven-failsafe-plugin</artifactId>
-        		<version>2.20</version>
+        		<version>2.20.1</version>
         		<configuration>
+                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                     <skipITs>${skipTests}</skipITs>
                 </configuration>
         		<executions>
@@ -179,7 +186,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.2</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
